--- a/self_repl_fns/tufte-edited.css
+++ b/self_repl_fns/tufte-edited.css
@@ -137,15 +137,15 @@ ol, ul { width: 45%;
 
 li { padding: 0.5rem 0; }
 
-figure { padding: 0;
-         border: 0;
-         font-size: 100%;
-         font: inherit;
-         vertical-align: baseline;
-         max-width: 55%;
-         -webkit-margin-start: 0;
-         -webkit-margin-end: 0;
-         margin: 0 0 3em 0; }
+figure, div.figure { padding: 0;
+                     border: 0;
+                     font-size: 100%;
+                     font: inherit;
+                     vertical-align: baseline;
+                     max-width: 55%;
+                     -webkit-margin-start: 0;
+                     -webkit-margin-end: 0;
+                     margin: 0 0 3em 0; }
 
 figcaption { float: right;
              clear: right;
@@ -184,16 +184,16 @@ a:link::-moz-selection { text-shadow: 0.03em 0 #b4d5fe, -0.03em 0 #b4d5fe, 0 0.0
 /* Sidenotes, margin notes, figures, captions */
 img { max-width: 100%; }
 
-.sidenote, .marginnote { float: right;
-                         clear: right;
-                         margin-right: -60%;
-                         width: 50%;
-                         margin-top: 0;
-                         margin-bottom: 0;
-                         font-size: 1.1rem;
-                         line-height: 1.3;
-                         vertical-align: baseline;
-                         position: relative; }
+.sidenote, .marginnote, p.caption { float: right;
+                                    clear: right;
+                                    margin-right: -60%;
+                                    width: 50%;
+                                    margin-top: 0;
+                                    margin-bottom: 0;
+                                    font-size: 1.1rem;
+                                    line-height: 1.3;
+                                    vertical-align: baseline;
+                                    position: relative; }
 
 .table-caption { float:right;
                  clear:right;
