--- a/self_repl_fns/tufte-edited.css
+++ b/self_repl_fns/tufte-edited.css
@@ -144,8 +144,7 @@ figure, div.figure { padding: 0;
                      vertical-align: baseline;
                      max-width: 55%;
                      -webkit-margin-start: 0;
-                     -webkit-margin-end: 0;
-                     margin: 0 0 3em 0; }
+                     -webkit-margin-end: 0; }
 
 figcaption { float: right;
              clear: right;
