Self-repl: Add the optquad command.
This is a quad that shows up everywhere, but is much
smaller on mobile screens in html.

--- a/self_repl_fns/tufte-edited.css
+++ b/self_repl_fns/tufte-edited.css
@@ -93,6 +93,20 @@ div.title { font-weight: 400;
   }
 }
 
+@media screen and (min-width: 761px) {
+  .MathJax .optquad {
+    width: 1.2em;
+    display: inline-block;
+  }
+}
+
+@media screen and (max-width: 760px) {
+  .MathJax .optquad {
+    width: 0.2em;
+    display: inline-block;
+  }
+}
+
 h1 { font-style: italic;
      font-weight: 400;
      margin-top: 3.2rem;
