--- a/self_repl_fns/tufte-edited.css
+++ b/self_repl_fns/tufte-edited.css
@@ -309,6 +309,8 @@ img { max-width: 100%; }
 
 p, footer, table, div.table-wrapper-small, div.supertable-wrapper > p, div.booktabs-wrapper, hr { width: 55%; }
 
+li p { width: 100%; }
+
 hr { margin: 0; }
 
 div.fullwidth, table.fullwidth { width: 100%; }
