--- a/randnn/tufte-edited.css
+++ b/randnn/tufte-edited.css
@@ -311,7 +311,7 @@ p, footer, table, div.table-wrapper-small, div.supertable-wrapper > p, div.bookt
 
 li p { width: 100%; }
 
-hr { margin: 0; }
+hr { margin: 100px 0; }
 
 div.fullwidth, table.fullwidth { width: 100%; }
 
