--- a/permutations/images/src/style.css
+++ b/permutations/images/src/style.css
@@ -31,3 +31,12 @@
   background-color: blue;
 }
 
+.centering {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 10px;
+  bottom: 10px;
+  width: 100%;
+}
