Get the first table to be decent.
This includes adding in a tex-focused patch file tex_edits.awk.
I'm not yet sure how awesome of an idea this is. We'll see.

For the record, this is my current plan for per-platform customizations:
* HTML: Try as much as I can to style via css only. I can wrap things in
  <div class="whatever"> containers in the md file to help.
* TEX: Edit the tex file directly, see that as a diff, and then
  effectively integrate that diff into tex_edits.awk by hand.

--- a/permutations/part1/tufte-edited.css
+++ b/permutations/part1/tufte-edited.css
@@ -333,6 +333,10 @@ table {
     padding-top: 10px;
 }
 
+.table1 tr>td:first-child {
+    padding-right: 20px;
+}
+
 li p { width: 100%; }
 
 hr { margin: 0; }
