Add little boxes around environments in html.
These boxes are only visible on web, and not at all in the pdf. I think
this works fine as such because the visual separation is nice in a
browser, but we kind of expect to have no such box in a pdf.

--- a/permutations/part1/tufte-edited.css
+++ b/permutations/part1/tufte-edited.css
@@ -440,3 +440,24 @@ ol > li:before {
     left: -2.5em;
 }
 
+/* a boxed environment */
+
+.box {
+    width: 55%;
+    border: 1px solid #e2e2e2;
+    /* padding: 10px; */
+    background-color: #f5f5f5;
+}
+
+.box > p {
+    width: 100%;
+    margin-block: 0;
+    margin: 10px;
+}
+
+.box > ol {
+    padding-inline-start: 58px;
+    width: calc(100% - 80px);
+}
+
+@media screen and (max-width: 760px) { .box { width: 90%; } }
