--- a/permutations/part1/tufte-edited.css
+++ b/permutations/part1/tufte-edited.css
@@ -466,6 +466,7 @@ ol > li:before {
     border: 1px solid #e2e2e2;
     /* padding: 10px; */
     background-color: #f5f5f5;
+    margin-top: 20px;
 }
 
 .box > p {
