Add some content, minor style update.
The monospaced font looks a bit too big in the main body area next to
the "same size" regular font, so I'm shrinking the monospace font a
little bit.

--- a/py_bug_analysis/tufte-edited.css
+++ b/py_bug_analysis/tufte-edited.css
@@ -504,3 +504,11 @@ div.csl-entry {
     margin-top: 30px;
     font-size: 16pt;
 }
+
+pre code {
+    font-size: 15px;
+}
+
+code {
+    font-size: 18px;
+}
