--- a/lego_puzzle/tufte-edited.css
+++ b/lego_puzzle/tufte-edited.css
@@ -287,7 +287,15 @@ a:link::-moz-selection { text-shadow: 0.03em 0 #b4d5fe, -0.03em 0 #b4d5fe, 0 0.0
                          background: #b4d5fe; }
 
 /* Sidenotes, margin notes, figures, captions */
-img { max-width: 100%; }
+
+
+/* Note: If I want left-aligned images, remove the margin properties here. */
+img {
+    max-width: 100%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
 
 .sidenote, .marginnote, p.caption { float: right;
                                     clear: right;
